--- a/work.html
+++ b/work.html
@@ -274,7 +274,7 @@
         class="hidden fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center z-[60]">
         <div class="relative">
             <button onclick="closeFullscreenImage()"
-                class="absolute -top-6 -right-4 sm:-top-6 sm:-right-12 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl shadow-lg z-50">
+                class="hidden sm:flex absolute -top-6 -right-4 sm:-top-6 sm:-right-12 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl shadow-lg z-50">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                     class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -618,7 +618,16 @@
         });
 
 
+        function closeFullscreenImage() {
+            document.getElementById("fullscreen-image-modal").classList.add("hidden");
+        }
 
+        // Close modal when clicking outside image (only if screen width < 776px)
+        document.getElementById("fullscreen-image-modal").addEventListener("click", (e) => {
+            if (window.innerWidth < 776 && !e.target.closest("img")) {
+                closeFullscreenImage();
+            }
+        });
 
     </script>
     <!-- full image -->
