--- a/contactus.html
+++ b/contactus.html
@@ -74,7 +74,7 @@
 
             <div class="md:w-1/2 flex items-center px-10 pt-4 pb-0 sm:py-6 md:px-12 md:py-24 xl:px-16 xl:py-32 justify-center border-b-2 border-dotted border-gray-400 sm:border-0"
                 style="border-image: repeating-linear-gradient(to right, #000 0, #000 1px, transparent 1px, transparent 7px) 100% 1;">
-                <div id="image-container" class="relative w-full max-w-md aspect-[1.4/1.1] sm:aspect-[1/1.1]">
+                <div id="image-container" class="relative w-full max-w-md aspect-[1/1.1]">
                     <!-- Background Image (Behind) -->
                     <img id="bg-img" src="/contactpage_assets/Vector_Smart_Object.svg" alt="Background"
                         class="image-to-move absolute top-1 sm:top-3 right-9 sm:right-8 w-[55%] h-[85%] sm:w-[65%] sm:h-full object-contain z-0" />
@@ -92,18 +92,18 @@
             <!-- style="border-image: repeating-linear-gradient(to bottom, #000000 0, #000000 1px, transparent 1px, transparent 7px) 1 100%;"> -->
 
             <!-- Right Side (Form) -->
-            <div class="md:w-1/2 pt-0 px-6 pb-5 sm:p-6 sm:p-10  flex flex-col justify-center relative">
+            <div class="md:w-1/2 pt-3 px-10 pb-5 sm:p-10  flex flex-col justify-center relative">
                 <!-- Header with Logo -->
                 <div class="flex items-center justify-between">
-                    <h1 class="text-base sm:text-2xl md:text-4xl leading-relaxed font-light text-[#272cf7]">L E T S <br> T A L K</h1>
-                    <img src="/contactpage_assets/stamp.png" alt="Logo" class="w-16 mt-6 sm:w-24 sm:mt-10  md:w-28">
+                    <h1 class="text-2xl md:text-4xl leading-relaxed font-light text-[#272cf7]">L E T S <br> T A L K</h1>
+                    <img src="/contactpage_assets/stamp.png" alt="Logo" class="w-20 mt-6 sm:w-24 sm:mt-10  md:w-28">
                 </div>
 
                 <!-- Form Section -->
                 <form class="mt-5 sm:mt-10 md:mt-24 space-y-6 md:space-y-10">
                     <!-- Name Field -->
                     <div class="pt-1 sm:pt-5 sm:pt-0">
-                        <input type="text" name="name" placeholder="NAME" class="w-full border-none outline-none bg-transparent text-[#272cf7] 
+                        <input type="text" name="name" placeholder="NAME" class="text-xs sm:text-base  w-full border-none outline-none bg-transparent text-[#272cf7] 
                                    placeholder:text-[#272cf7] focus:ring-0" required>
                         <div class="w-full border-b-2 border-dotted border-[#272cf7]">
                         </div>
@@ -111,7 +111,7 @@
 
                     <!-- Email Field -->
                     <div class="pt-1 sm:pt-5 sm:pt-0">
-                        <input type="email" name="email" placeholder="EMAIL ADDRESS" class="w-full border-none outline-none bg-transparent text-[#272cf7] 
+                        <input type="email" name="email" placeholder="EMAIL ADDRESS" class="text-xs sm:text-base w-full border-none outline-none bg-transparent text-[#272cf7] 
                                    placeholder:text-[#272cf7] focus:ring-0" required>
                         <div class="w-full border-b-2 border-dotted border-[#272cf7]">
                         </div>
@@ -119,7 +119,7 @@
 
                     <!-- Message Field -->
                     <div class="pt-2 sm:pt-5 sm:pt-0">
-                        <textarea name="message" rows="1" placeholder="YOUR MESSAGE FOR US" class="w-full border-none outline-none bg-transparent text-[#272cf7] 
+                        <textarea name="message" rows="1" placeholder="YOUR MESSAGE FOR US" class="text-xs sm:text-base w-full border-none outline-none bg-transparent text-[#272cf7] 
                                    placeholder:text-[#272cf7] focus:ring-0" required></textarea>
                         <div class="w-full border-b-2 border-dotted border-[#272cf7]">
                         </div>
