fixed testimonial height issue

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 
     <!--carousel slider-->
     <section class="min-h-screen h-auto flex flex-col">
-        <div class="h-[100dvh] sm:h-[60dvh] relative overflow-hidden bg-[#ffd527]">
+        <div class="h-[100dvh] sm:h-[60dvh] md:h-[50dvh] lg:h-[60dvh] relative overflow-hidden bg-[#ffd527]">
             <div class="container mx-auto px-4 h-full flex flex-col 
         md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
 
