--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
 
     <!-- Hero Section -->
-    <section class="flex items-center justify-center h-screen px-6 md:px-12 bg-[#24d56d] w-full">
+    <section class="flex items-center justify-center h-screen px-6 md:px-12 bg-[#24d56d] w-full" id="banner-section">
         <div class="flex flex-col md:flex-row items-center justify-between w-full max-w-6xl">
             <!-- Logo Section -->
             <div class="w-full md:w-1/2 flex justify-center mt-6 md:mt-0">
@@ -258,7 +258,7 @@
         </div>
 
         <!-- Movie Posters Section -->
-        <div class="bg-white min-h-1/2 flex items-center justify-center px-4 py-10 sm:py-24">
+        <div class="bg-white min-h-1/2 flex items-center justify-center px-4 py-10 sm:py-24"  id="movies-poster">
             <div class="max-w-7xl w-full flex flex-col-reverse lg:flex-row items-center justify-between gap-8">
 
                 <!-- Text Content -->
@@ -355,7 +355,7 @@
     </section>
 
     <!--carousel slider-->
-    <section class="min-h-screen h-auto flex flex-col">
+    <section id="carousel-section" class="min-h-screen h-auto flex flex-col">
         <div class="h-[100dvh] sm:h-[60dvh] md:h-[50dvh] lg:h-[60dvh] relative overflow-hidden bg-[#ffd527]">
             <div class="container mx-auto px-4 h-full flex flex-col 
         md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
@@ -857,15 +857,27 @@
             if (currentSection) {
                 const sectionBgColor = window.getComputedStyle(currentSection).backgroundColor;
                 const sectionBgImage = window.getComputedStyle(currentSection).backgroundImage;
+                const innerDiv = currentSection.querySelector('#movies-poster');
+                let divRect;
+                if(innerDiv){
+                    divRect = innerDiv.getBoundingClientRect();
+                }
 
-                // Check if this is a section where we need to invert
-                if (needsInversion(sectionBgColor, sectionBgImage)) {
+                if (currentSection.id === 'banner-section' || currentSection.id === 'carousel-section' || (innerDiv && divRect && divRect.top <= 80 && divRect.bottom > 0)) {
                     logo.style.filter = "invert(1)";
                     menuIcon.style.filter = "invert(1)";
                 } else {
                     logo.style.filter = "none";
                     menuIcon.style.filter = "none";
                 }
+                // Check if this is a section where we need to invert
+                // if (needsInversion(sectionBgColor, sectionBgImage)) {
+                //     logo.style.filter = "invert(1)";
+                //     menuIcon.style.filter = "invert(1)";
+                // } else {
+                //     logo.style.filter = "none";
+                //     menuIcon.style.filter = "none";
+                // }
             }
         }
 
