--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                 <img src="/MIW_Website_Assets/SD-10.png"
                                     class="title object-contain w-full h-60 sm:h-full" />
                             </div>
-                            <img src="/MIW_Website_Assets/SD-09.png" class="character w-full h-72 pt-10" />
+                            <img src="/MIW_Website_Assets/SD-09.png" class="character w-full h-72" />
                         </div>
                     </a>
 
