work page grid issue

--- a/work.html
+++ b/work.html
@@ -109,7 +109,7 @@
 
     <!--image bento grid-->
     <section class="h-auto w-full mx-auto">
-        <div class="grid grid-cols-4 grid-rows-20 gap-2 sm:gap-4 px-2 sm:px-4 py-4">
+        <div class="grid grid-cols-4 grid-rows-20 gap-0 px-0 sm:gap-0 px-0 sm:px-0 py-0">
             <div class="col-span-2 row-span-2 overflow-hidden" onclick="openModal(event, 1)">
                 <a href="/work.html/tossImage" target="_blank">
                     <img src="/MIW_Website_Assets/Poss_image_work.png"
