share in all page

--- a/service.html
+++ b/service.html
@@ -301,6 +301,7 @@
 					<div
 						class="flex flex-col sm:flex-row justify-between items-center w-full space-y-8 mt-8 sm:space-y-0">
 						<button
+						id="shareButton"
 							class="bg-pink-500 border border-white px-6 py-3 text-lg text-white font-semibold flex items-center gap-2">
 							<img src="/footer-png/share-button.png" alt="Share Icon" class="w-6 h-6"> Share this Website
 						</button>
@@ -362,6 +363,16 @@
 		});
 	</script>
 	<script>
+		document.getElementById("shareButton").addEventListener("click", async () => {
+            if (navigator.share) {
+                await navigator.share({
+                    title: "Check out this website!",
+                    url: window.location.href
+                });
+            } else {
+                alert("Your browser does not support sharing.");
+            }
+        });
 		function updatePlaceholder() {
 			const inputField = document.querySelector("input[type='email']");
 
