--- a/work.html
+++ b/work.html
@@ -347,6 +347,7 @@
                     <!-- Second Row: Button & Social Media Icons -->
                     <div class="flex flex-col sm:flex-row justify-between items-center w-full space-y-4 sm:space-y-0">
                         <button
+                            id="shareButton"
                             class="bg-[#00001b] border border-white px-6 py-3 text-lg text-white font-semibold flex items-center gap-2">
                             <img src="/footer-png/share-button.png" alt="Share Icon" class="w-6 h-6"> Share this Website
                         </button>
@@ -632,6 +633,16 @@
     </script>
     <!-- full image -->
     <script>
+        document.getElementById("shareButton").addEventListener("click", async () => {
+            if (navigator.share) {
+                await navigator.share({
+                    title: "Check out this website!",
+                    url: window.location.href
+                });
+            } else {
+                alert("Your browser does not support sharing.");
+            }
+        });
         function openFullscreenImage(src) {
             const modal = document.getElementById('fullscreen-image-modal');
             const image = document.getElementById('fullscreen-img');
