menu hover effect

--- a/index.html
+++ b/index.html
@@ -112,14 +112,28 @@
         </button>
 
         <!-- Menu Items -->
-        <ul class="text-center leading-[2.5rem]">
-            <li class="mt-2"><a href="/index.html" class="font-bold text-blue-900">H O M E</a></li>
-            <li class="mt-2"><a href="/work.html">W O R K</a></li>
-            <li class="mt-2"><a href="/aboutus.html">A B O U T</a></li>
-            <li class="mt-2"><a href="/service.html">S E R V I C E S</a></li>
-            <li class="mt-2"><a href="/team.html">T E A M</a></li>
-            <li class="mt-2"><a href="/contactus.html">C O N T A C T</a></li>
+        <ul class="text-center leading-[2.5rem] text-lg">
+            <li class="mt-2">
+                <a href="/index.html" class="text-black-700 font-bold text-3xl hover:font-bold hover:text-3xl">H O M E</a>
+            </li>
+            
+            <li class="mt-2">
+                <a href="/work.html" class="text-2xl font-thin hover:font-bold hover:text-3xl font-normal">W O R K</a>
+            </li>
+            <li class="mt-2">
+                <a href="/aboutus.html" class="text-2xl font-thin hover:font-bold hover:text-3xl font-normal">A B O U T</a>
+            </li>
+            <li class="mt-2">
+                <a href="/service.html" class="text-2xl font-thin hover:font-bold hover:text-3xl font-normal">S E R V I C E S</a>
+            </li>
+            <li class="mt-2">
+                <a href="/team.html" class="text-2xl font-thin hover:font-bold hover:text-3xl font-normal">T E A M</a>
+            </li>
+            <li class="mt-2">
+                <a href="/contactus.html" class="text-2xl font-thin hover:font-bold hover:text-3xl font-normal">C O N T A C T</a>
+            </li>
         </ul>
+        
     </div>
 
     <!-- Hero Section -->
