--- a/index.html
+++ b/index.html
@@ -112,28 +112,45 @@
         </button>
 
         <!-- Menu Items -->
-        <ul class="text-center leading-[2.5rem] text-lg">
-            <li class="mt-2">
-                <a href="/index.html" class="text-black-700 font-bold text-3xl hover:font-bold hover:text-3xl">H O M E</a>
+        <ul class="text-center leading-[2.5rem]">
+            <li class="mt-2 pb-3">
+                <a href="/index.html"
+                    class="text-black-700 font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block">
+                    H O M E
+                </a>
             </li>
-            
-            <li class="mt-2">
-                <a href="/work.html" class="text-2xl font-thin hover:font-bold hover:text-3xl font-normal">W O R K</a>
+            <li class="mt-2 pb-3">
+                <a href="/work.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    W O R K
+                </a>
             </li>
-            <li class="mt-2">
-                <a href="/aboutus.html" class="text-2xl font-thin hover:font-bold hover:text-3xl font-normal">A B O U T</a>
+            <li class="mt-2 pb-3">
+                <a href="/aboutus.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    A B O U T
+                </a>
             </li>
-            <li class="mt-2">
-                <a href="/service.html" class="text-2xl font-thin hover:font-bold hover:text-3xl font-normal">S E R V I C E S</a>
+            <li class="mt-2 pb-3">
+                <a href="/service.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    S E R V I C E S
+                </a>
             </li>
-            <li class="mt-2">
-                <a href="/team.html" class="text-2xl font-thin hover:font-bold hover:text-3xl font-normal">T E A M</a>
+            <li class="mt-2 pb-3">
+                <a href="/team.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    T E A M
+                </a>
             </li>
-            <li class="mt-2">
-                <a href="/contactus.html" class="text-2xl font-thin hover:font-bold hover:text-3xl font-normal">C O N T A C T</a>
+            <li class="mt-2 pb-3">
+                <a href="/contactus.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    C O N T A C T
+                </a>
             </li>
         </ul>
-        
+
     </div>
 
     <!-- Hero Section -->
@@ -537,7 +554,8 @@
     <button id="workDetailsPageBtn" onclick="goToWorkPage()"
         class="hidden fixed top-[11%] right-4 sm:right-8 w-9 h-9 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl   shadow-lg z-50">
         <img src="/MIW_Website_Assets/work-page-button.png" alt="Details" class="w-3 h-3 object-contain">
-        <span class="text-[8px] uppercase absolute top-10 leading-[12px] hidden md:block whitespace-nowrap">WORK PAGE</span>    </button>
+        <span class="text-[8px] uppercase absolute top-10 leading-[12px] hidden md:block whitespace-nowrap">WORK
+            PAGE</span> </button>
 
     <div id="work-details-popup"
         class="hidden fixed inset-0 bg-black bg-opacity-65 flex items-center justify-center px-4 pb-16">
