img optimzation and poster issue fix

--- a/index.html
+++ b/index.html
@@ -304,12 +304,12 @@
                 <div class="w-full grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
                     <!-- Left Image -->
                     <a href="#" onclick="event.preventDefault();" class="flex justify-center" data-autoclick>
-                        <div class="card mb-20 sm:mb-0 pb-2 sm:pb-0">
+                        <div class="card mb-20 mt-10 sm:mt-0 sm:mb-0 pb-2 sm:pb-0">
                             <div class="wrapper">
                                 <img src="/MIW_Website_Assets/SD-10.png"
                                     class="title object-contain w-full h-60 sm:h-full" />
                             </div>
-                            <img src="/MIW_Website_Assets/SD-09.png" class="character  w-full h-72" />
+                            <img src="/MIW_Website_Assets/SD-09.png" class="character character-sm w-full h-72" />
                         </div>
                     </a>
 
@@ -561,7 +561,6 @@
         <span class="text-[8px] uppercase text-white leading-[12px] hidden md:block whitespace-nowrap">WORK
             PAGE</span>
     </div>
-
 
 
     <div id="work-details-popup"
